@@ -3,6 +3,11 @@
 
 #pragma once
 
+#if !defined(S_IFLNK)
+# define _S_IFLNK    0x0800
+# define S_IFLNK     _S_IFLNK
+#endif
+
 struct hooked_stat
 {
     __int64 st_size;
